@@ -1,0 +1,48 @@
+{
+  "entity": "collection",
+  "count": 2,
+  "items": [
+    {
+      "id": "va_84lyVss1CRZ6eM",
+      "entity": "virtual_account",
+      "name": "Merchant Billing Label",
+      "description": "Second Virtual Account",
+      "status": "active",
+      "amount_paid": 1200,
+      "notes": [],
+      "customer_id": null,
+      "receivers": [
+        {
+          "id": "ba_87txVas2oSzzvx",
+          "entity": "bank_account",
+          "name": "Merchant Billing Label",
+          "account_number": "RAZORPAY9KWHB7BL92",
+          "ifsc": "RZPB0000001"
+        }
+      ],
+      "created_at": 1497873405
+    },
+    {
+      "id": "va_4xbQrmEoA5WJ0G",
+      "entity": "virtual_account",
+      "name": "Merchant Billing Label",
+      "description": "First Virtual Account",
+      "status": "active",
+      "amount_paid": 900,
+      "notes": {
+        "reference_key": "reference_value"
+      },
+      "receivers": [
+        {
+          "id": "ba_4lsdkfldlteskf",
+          "entity": "bank_account",
+          "name": "Merchant Billing Label",
+          "account_number": "RAZORPAY9876543210",
+          "ifsc": "RZPB0000001"
+        }
+      ],
+      "customer_id": "cust_805c8oBQdBGPwS",
+      "created_at": 1497922042
+    }
+  ]
+}
