@@ -3,6 +3,8 @@
 Changelog for Razorpay-Ruby SDK.
 
 ## Unreleased
+### Added
+- Support for Virtual Accounts
 
 ## [2.0.1] - 2017-07-31
 ### Fixed
